plugins {
    id 'java'
}

group 'ch.szclsb'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

compileJava {
    options.compilerArgs += "--enable-preview"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileTestJava {
    options.compilerArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}
